# golem-kernel-python

./: .gitignore  MANIFEST.in  README.md  Untitled.ipynb  demo.ipynb  demo_data.csv  demo_regression.ipynb  demo_regression_tf.ipynb  golem_requestor.py  hello_world_client.py  kernel.json  kernel.py  pyproject.toml  python_shell.py  repl.py  requirements.txt
examples/: goerli_testnet_example.ipynb  polygon_mainnet_example.ipynb
golem_jupyter_kernel/: __main__.py  golem.py  golem_kernel.py  manifest.json  remote_python.py
golem_jupyter_kernel/comm/: manager.py
golem_kernel/: __init__.py  __main__.py  golem.py  golem_kernel.py  manifest.json  remote_python.py
golem_kernel/comm/: manager.py
jupyter_on_golem/: __init__.py  __main__.py  golem.py  golem_kernel.py
provider/: Dockerfile  Dockerfile_gpu  example_client.py  gdrive.py  local_client.py  pip.conf  python_server.py  requirements.txt  server.py  settings.yaml  shell.py  simple_client.py  wait_for_kernel.sh  wait_for_server.sh
v0/: .gitignore  echo_kernel.py  kernel.json  python_shell.py  requirements.txt  t1.py
v0/golem_kernel/: golem.py  golem_kernel.py  remote_python.py
v0/provider/: Dockerfile  README.md  requirements.txt  run_shell.sh
