[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "golem-kernel"
version = "0.1.0"
description = "Jupyter Kernel on Golem (https://www.golem.network/)"
authors = ["Jan Betley <jan.betley@golem.network>", "GolemFactory <contact@golem.network>"]
license = "LGPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
jupyter = "1.0.0"
websockets = "10.4"
golem_core = { git = "https://github.com/golemfactory/golem-core-python", rev = "4e73b3b" }
#golem_core = "0.1.0"
pytimeparse = "1.1.8"
humanize = "4.6.0"
